--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Temukan khodam yang ada di dalam diri Anda dengan memasukkan nama Anda di sini. Cek khodam sekarang dan rasakan kehadirannya.">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link rel="canonical" href="https://contohwebsite.com/cek-khodam">
+  <link rel="canonical" href="https://cekkhodambro.vercel.app">
   <link
       rel="icon"
       type="image/svg+xml"
