--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="icon" type="image/svg+xml" href="https://www.iconpacks.net/icons/2/free-search-icon-2911-thumb.png"/>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="./styles.css">
+  <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-3QWQCTEEHZ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
